--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@headlessui/react": "^1.6.2",
     "@mui/icons-material": "^5.6.0",
     "@mui/material": "^5.6.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
-    "chart.js": "^3.7.1",
+    "chart.js": "^3.8.0",
     "dotenv": "^16.0.0",
     "react": "^18.0.0",
     "react-chartjs-2": "^4.1.0",
